example_subset/istio_ingress.yaml
---
# this is required for minikube to work properly
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: minikube-ingress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
